# openapi-driven-development

./: .gitignore  .gitlab-ci.yaml  Makefile  README.md  pyproject.toml
books/: app.py
openapi/: __init__.py  checksum  schema.yaml
